@@ -10,8 +10,11 @@ package org.elasticsearch.cluster.metadata;
 
 import org.elasticsearch.ResourceNotFoundException;
 import org.elasticsearch.Version;
+import org.elasticsearch.action.admin.indices.alias.IndicesAliasesClusterStateUpdateRequest;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.cluster.service.ClusterStateTaskExecutorUtils;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.core.Tuple;
@@ -46,7 +49,12 @@ import static org.mockito.Mockito.when;
 
 public class MetadataIndexAliasesServiceTests extends ESTestCase {
     private final MetadataDeleteIndexService deleteIndexService = mock(MetadataDeleteIndexService.class);
-    private final MetadataIndexAliasesService service = new MetadataIndexAliasesService(null, null, deleteIndexService, xContentRegistry());
+    private final MetadataIndexAliasesService service = new MetadataIndexAliasesService(
+        mock(ClusterService.class),
+        null,
+        deleteIndexService,
+        xContentRegistry()
+    );
 
     public MetadataIndexAliasesServiceTests() {
         // Mock any deletes so we don't need to worry about how MetadataDeleteIndexService does its job
@@ -292,13 +300,13 @@ public class MetadataIndexAliasesServiceTests extends ESTestCase {
 
         ClusterState after = service.applyAliasActions(
             before,
-            Arrays.asList(new AliasAction.Add("test", "alias", null, null, null, false, null))
+            List.of(new AliasAction.Add("test", "alias", null, null, null, false, null))
         );
         assertFalse(after.metadata().index("test").getAliases().get("alias").writeIndex());
         assertNull(after.metadata().getIndicesLookup().get("alias").getWriteIndex());
         assertAliasesVersionIncreased("test", before, after);
 
-        after = service.applyAliasActions(before, Arrays.asList(new AliasAction.Add("test", "alias", null, null, null, null, null)));
+        after = service.applyAliasActions(before, List.of(new AliasAction.Add("test", "alias", null, null, null, null, null)));
         assertNull(after.metadata().index("test").getAliases().get("alias").writeIndex());
         assertThat(
             after.metadata().index(after.metadata().getIndicesLookup().get("alias").getWriteIndex()),
@@ -306,7 +314,7 @@ public class MetadataIndexAliasesServiceTests extends ESTestCase {
         );
         assertAliasesVersionIncreased("test", before, after);
 
-        after = service.applyAliasActions(before, Arrays.asList(new AliasAction.Add("test", "alias", null, null, null, true, null)));
+        after = service.applyAliasActions(before, List.of(new AliasAction.Add("test", "alias", null, null, null, true, null)));
         assertTrue(after.metadata().index("test").getAliases().get("alias").writeIndex());
         assertThat(
             after.metadata().index(after.metadata().getIndicesLookup().get("alias").getWriteIndex()),
@@ -329,10 +337,7 @@ public class MetadataIndexAliasesServiceTests extends ESTestCase {
             .metadata(Metadata.builder().put(indexMetadata).put(indexMetadata2))
             .build();
 
-        ClusterState after = service.applyAliasActions(
-            before,
-            Arrays.asList(new AliasAction.Add("test", "alias", null, null, null, null, null))
-        );
+        ClusterState after = service.applyAliasActions(before, List.of(new AliasAction.Add("test", "alias", null, null, null, null, null)));
         assertNull(after.metadata().index("test").getAliases().get("alias").writeIndex());
         assertThat(
             after.metadata().index(after.metadata().getIndicesLookup().get("alias").getWriteIndex()),
@@ -343,7 +348,7 @@ public class MetadataIndexAliasesServiceTests extends ESTestCase {
 
         Exception exception = expectThrows(
             IllegalStateException.class,
-            () -> service.applyAliasActions(before, Arrays.asList(new AliasAction.Add("test", "alias", null, null, null, true, null)))
+            () -> service.applyAliasActions(before, List.of(new AliasAction.Add("test", "alias", null, null, null, true, null)))
         );
         assertThat(exception.getMessage(), startsWith("alias [alias] has more than one write index ["));
     }
@@ -402,7 +407,7 @@ public class MetadataIndexAliasesServiceTests extends ESTestCase {
 
         ClusterState after = service.applyAliasActions(
             before,
-            Arrays.asList(new AliasAction.Add("test3", "alias", null, null, null, true, null))
+            List.of(new AliasAction.Add("test3", "alias", null, null, null, true, null))
         );
         assertTrue(after.metadata().index("test3").getAliases().get("alias").writeIndex());
         assertThat(
@@ -675,6 +680,44 @@ public class MetadataIndexAliasesServiceTests extends ESTestCase {
         assertThat(result.metadata().dataStreamAliases().get("logs-http"), nullValue());
     }
 
+    public void testAddAndRemoveAliasClusterStateUpdate() throws Exception {
+        // Create a state with a single index
+        String index = randomAlphaOfLength(5);
+        ClusterState before = createIndex(ClusterState.builder(ClusterName.DEFAULT).build(), index);
+        IndicesAliasesClusterStateUpdateRequest addAliasRequest = new IndicesAliasesClusterStateUpdateRequest(
+            List.of(new AliasAction.Add(index, "test", null, null, null, null, null))
+        );
+        IndicesAliasesClusterStateUpdateRequest removeAliasRequest = new IndicesAliasesClusterStateUpdateRequest(
+            List.of(new AliasAction.Remove(index, "test", true))
+        );
+
+        ClusterState after = ClusterStateTaskExecutorUtils.executeAndAssertSuccessful(
+            before,
+            service.getExecutor(),
+            List.of(
+                new MetadataIndexAliasesService.ApplyAliasesTask(addAliasRequest, null),
+                // Repeat the same change to ensure that the clte version won't increase
+                new MetadataIndexAliasesService.ApplyAliasesTask(addAliasRequest, null),
+                new MetadataIndexAliasesService.ApplyAliasesTask(removeAliasRequest, null),
+                new MetadataIndexAliasesService.ApplyAliasesTask(addAliasRequest, null)
+            )
+        );
+
+        IndexAbstraction alias = after.metadata().getIndicesLookup().get("test");
+        assertNotNull(alias);
+        assertThat(alias.getType(), equalTo(IndexAbstraction.Type.ALIAS));
+        assertThat(alias.getIndices(), contains(after.metadata().index(index).getIndex()));
+        assertAliasesVersionIncreased(new String[] { index }, before, after, 3);
+        assertThat(after.metadata().aliasedIndices("test"), contains(after.metadata().index(index).getIndex()));
+    }
+
+    public void testEmptyTaskListProducesSameClusterState() throws Exception {
+        String index = randomAlphaOfLength(5);
+        ClusterState before = createIndex(ClusterState.builder(ClusterName.DEFAULT).build(), index);
+        ClusterState after = ClusterStateTaskExecutorUtils.executeAndAssertSuccessful(before, service.getExecutor(), List.of());
+        assertSame(before, after);
+    }
+
     private ClusterState applyHiddenAliasMix(ClusterState before, Boolean isHidden1, Boolean isHidden2) {
         return service.applyAliasActions(
             before,
@@ -711,11 +754,19 @@ public class MetadataIndexAliasesServiceTests extends ESTestCase {
     }
 
     private void assertAliasesVersionIncreased(final String[] indices, final ClusterState before, final ClusterState after) {
+        assertAliasesVersionIncreased(indices, before, after, 1);
+    }
+
+    private void assertAliasesVersionIncreased(
+        final String[] indices,
+        final ClusterState before,
+        final ClusterState after,
+        final int diff
+    ) {
         for (final var index : indices) {
-            final long expected = 1 + before.metadata().index(index).getAliasesVersion();
+            final long expected = diff + before.metadata().index(index).getAliasesVersion();
             final long actual = after.metadata().index(index).getAliasesVersion();
             assertThat("index metadata aliases version mismatch", actual, equalTo(expected));
         }
     }
-
 }
